added util folder to firestarr container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,3 +123,6 @@ services:
       - type: bind
         source: ./data/generated/tiled
         target: /FireGUARD/100m/default
+      - type: bind
+        source: ./util
+        target: /FireGUARD/util
