--- a/.docker/Dockerfile_firestarr
+++ b/.docker/Dockerfile_firestarr
@@ -3,13 +3,19 @@ FROM gcc:10.3
 WORKDIR /FireGUARD/
 COPY .docker/requirements_firestarr.txt requirements_firestarr.txt
 WORKDIR /FireGUARD/FireSTARR/
-RUN apt-get update \
-	&& apt-get install -y gcc make git curl zip unzip tar \
-		libtiff-dev libgeotiff-dev g++ cmake sqlite3 libsqlite3-dev libpq-dev \
-		unixodbc-dev odbc-postgresql python3-pip \
-    libgdal-dev \
-	&& apt-get clean && rm -rf /var/lib/apt/lists/* \
-	&& rm -rf \
+#RUN add-apt-repository --remove ppa:ubuntugis/ubuntugis \
+RUN apt-get install -y gcc make git curl zip unzip tar \
+    libtiff-dev libgeotiff-dev g++ cmake sqlite3 libsqlite3-dev libpq-dev \
+    unixodbc-dev odbc-postgresql python3-pip software-properties-common \
+    libgdal-dev
+RUN echo Adding ppa \
+  && (add-apt-repository ppa:ubuntugis/ubuntugis-unstable || echo Ignoring add error) \
+  && echo Added ppa \
+  && (apt-get update || echo Ignoring update errors) \
+  && echo Updated \
+  && apt-get install gdal-bin \
+  && apt-get clean && rm -rf /var/lib/apt/lists/* \
+  && rm -rf \
       /usr/share/man/* \
       /usr/includes/* \
       /var/cache/apk/* \
