--- a/.docker/Dockerfile_wxcli
+++ b/.docker/Dockerfile_wxcli
@@ -4,32 +4,33 @@ WORKDIR /FireGUARD
 COPY .docker/requirements_wxcli.txt requirements_wxcli.txt
 WORKDIR /FireGUARD/
 RUN pip install -r /FireGUARD/requirements_wxcli.txt \
-	&& apt-get update \
-	&& apt-get install -y gcc make gfortran wget \
-	&& wget ftp://ftp.cpc.ncep.noaa.gov/wd51we/wgrib2/wgrib2.tgz.v3.0.2 \
-	&& tar -xzvf wgrib2.tgz.v3.0.2 \
-	&& rm wgrib2.tgz.v3.0.2 \
-	&& cd /FireGUARD/grib2 \
+  && apt-get update \
+  && apt-get install -y gcc make gfortran wget \
+  && wget ftp://ftp.cpc.ncep.noaa.gov/wd51we/wgrib2/wgrib2.tgz.v3.0.2 \
+  && tar -xzvf wgrib2.tgz.v3.0.2 \
+  && rm wgrib2.tgz.v3.0.2 \
+  && cd /FireGUARD/grib2 \
   && sed -i "s/MAKE_SHARED_LIB=0/MAKE_SHARED_LIB=1/" makefile \
-	&& export CC=gcc \
-	&& export FC=gfortran \
-	&& export COMP_SYS=gnu_linux \
+  && export CC=gcc \
+  && export FC=gfortran \
+  && export COMP_SYS=gnu_linux \
   && make clean \
   && make lib \
   && cp lib/libwgrib2.so /usr/local/lib/python3.6/site-packages/
 # don't need the wgrib2 binary but this is how you would get it
-#RUN export CC=gcc \
-#	&& export FC=gfortran \
-#	&& export COMP_SYS=gnu_linux \
-# && make clean \
-#	&& make \
-#	&& mv wgrib2/wgrib2 /FireGUARD/wgrib2
+RUN export CC=gcc \
+  && export FC=gfortran \
+  && export COMP_SYS=gnu_linux \
+  && cd /FireGUARD/grib2 \
+  && make clean \
+  && make \
+  && mv wgrib2/wgrib2 /FireGUARD/wgrib2
 RUN apt-get purge -y --auto-remove gcc make gfortran \
-	&& apt-get install -y libgfortran5 libgomp1 cron util-linux
+  && apt-get install -y libgfortran5 libgomp1 cron util-linux
 WORKDIR /FireGUARD/WeatherSHIELD
 RUN echo "*/5 * * * * root /usr/bin/flock -n /tmp/update.lockfile /FireGUARD/WeatherSHIELD/update.sh > /proc/1/fd/1 2>/proc/1/fd/2" >> /etc/crontab
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* \
-	&& rm -rf \
+  && rm -rf \
       /usr/share/man/* \
       /usr/includes/* \
       /var/cache/apk/* \
