install gdal after numpy to ensure scripts show up

--- a/.docker/Dockerfile_gis
+++ b/.docker/Dockerfile_gis
@@ -1,11 +1,13 @@
 # syntax=docker/dockerfile:1
-FROM thinkwhere/gdal-python
+FROM thinkwhere/gdal-python:3.6
 WORKDIR /FireGUARD
 COPY .docker/requirements_gis.txt requirements_gis.txt
 WORKDIR /FireGUARD/GIS/
 RUN python -m pip install --upgrade pip \
-	&& pip install -r /FireGUARD/requirements_gis.txt \
-	&& rm -rf \
+	&& pip uninstall -y gdal \
+  && pip install -r /FireGUARD/requirements_gis.txt \
+  && pip install "gdal==`gdal-config --version`" \
+  && rm -rf \
       /usr/share/man/* \
       /usr/includes/* \
       /var/cache/apk/* \
