--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -2,8 +2,13 @@
 
 name: Doxygen Manual
 
-on: [workflow_dispatch]
-  
+on: 
+  workflow_dispatch:
+    inputs:
+      git-ref:
+        description: Git Ref (Optional)    
+        required: false
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -14,8 +19,15 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-        
+    - name: Clone Repository (Late
+      uses: actions/checkout@v2
+      if: github.event.inputs.git-ref == ''
+    - name: Clone Repository (Custom Ref)
+      uses: actions/checkout@v2
+      if: github.event.inputs.git-ref != ''
+      with:
+        ref: ${{ github.event.inputs.git-ref }}
+    
     - name: Doxygen FireSTARR
       uses: mattnotmitt/doxygen-action@v1.1.0
       with:
