--- a/documentation/fireguard.conf
+++ b/documentation/fireguard.conf
@@ -2318,7 +2318,7 @@ EXTERNAL_PAGES         = YES
 # DIA_PATH tag allows you to specify the directory where the dia binary resides.
 # If left empty dia is assumed to be found in the default search path.
 
-DIA_PATH               = ./dia/bin
+DIA_PATH               =
 
 # If set to YES the inheritance and collaboration graphs will hide inheritance
 # and usage relations if the target is undocumented or is not a class.
