--- a/.docker/Dockerfile_firestarr
+++ b/.docker/Dockerfile_firestarr
@@ -13,7 +13,7 @@ RUN (apt-get update || echo Ignoring update errors) \
   && apt-get install -y gcc make git curl zip unzip tar \
     libtiff-dev libgeotiff-dev g++ cmake sqlite3 libsqlite3-dev libpq-dev \
     unixodbc-dev odbc-postgresql python3-pip \
-    libgdal-dev \
+    libgdal-dev util-linux cron rsync \
   && apt-get install -y gdal-bin libgdal-dev \
   && apt-get clean && rm -rf /var/lib/apt/lists/* \
   && rm -rf \
@@ -33,5 +33,5 @@ RUN (apt-get update || echo Ignoring update errors) \
   && ogrinfo --version | sed "s/GDAL \(.*\),.*/\1/"\
   && python -m pip install gdal==`ogrinfo --version | sed "s/GDAL \(.*\),.*/\1/"`
 #COPY ./FireSTARR/ /FireGUARD/FireSTARR/
-#RUN cmake --configure . \
-#  && cmake --build .
+RUN echo "*/5 * * * * root /usr/bin/flock -n /tmp/update.lockfile /FireGUARD/FireSTARR/update.sh > /proc/1/fd/1 2>/proc/1/fd/2" >> /etc/crontab
+ENTRYPOINT cron -f
