--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -132,5 +132,6 @@ services:
       - type: bind
         source: ./util
         target: /FireGUARD/util
+    restart: on-failure
     depends_on:
       - wxshield
