--- a/.docker/Dockerfile_firestarr
+++ b/.docker/Dockerfile_firestarr
@@ -13,8 +13,8 @@ RUN (apt-get update || echo Ignoring update errors) \
   && apt-get install -y gcc make git curl zip unzip tar \
     libtiff-dev libgeotiff-dev g++ cmake sqlite3 libsqlite3-dev libpq-dev \
     unixodbc-dev odbc-postgresql python3-pip \
-    libgdal-dev util-linux cron rsync \
-  && apt-get install -y gdal-bin libgdal-dev \
+    libgdal-dev util-linux cron rsync openssh-server \
+  && apt-get install -y gdal-bin libgdal-dev gdb \
   && apt-get clean && rm -rf /var/lib/apt/lists/* \
   && rm -rf \
       /usr/share/man/* \
@@ -34,4 +34,4 @@ RUN (apt-get update || echo Ignoring update errors) \
   && python -m pip install gdal==`ogrinfo --version | sed "s/GDAL \(.*\),.*/\1/"`
 #COPY ./FireSTARR/ /FireGUARD/FireSTARR/
 RUN echo "*/5 * * * * root /usr/bin/flock -n /tmp/update.lockfile /FireGUARD/FireSTARR/update.sh > /proc/1/fd/1 2>/proc/1/fd/2" >> /etc/crontab
-ENTRYPOINT cron -f
+ENTRYPOINT service ssh start && cron -f
