--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,9 @@ services:
         source: ./FireSTARR/www
         target: /app/firestarr/
       - type: bind
+        source: ./documentation/html
+        target: /app/documentation/
+      - type: bind
         source: ./data
         target: /app/data
     depends_on:
