--- a/.github/workflows/docker-compose.yml
+++ b/.github/workflows/docker-compose.yml
@@ -8,3 +8,4 @@ jobs:
       - name: Build the stack
         run: docker-compose up -d
       - name: Test
+        run: docker-compose exec firestarr /bin/bash ./test.sh
