changed so test script runs FireSTARR without arguments

--- a/.github/workflows/docker-compose.yml
+++ b/.github/workflows/docker-compose.yml
@@ -10,4 +10,4 @@ jobs:
       - name: Build the stack
         run: docker-compose up -d
       - name: Test
-        run: docker-compose exec firestarr /bin/bash ./test.sh
+        run: docker-compose exec firestarr ./FireSTARR
