--- a/.github/workflows/docker-compose.yml
+++ b/.github/workflows/docker-compose.yml
@@ -10,4 +10,4 @@ jobs:
       - name: Build the stack
         run: docker-compose up -d
       - name: Test
-        run: docker-compose exec -t firestarr ./FireSTARR
+        run: docker-compose exec -T firestarr ./FireSTARR
