got perf working in firestarr docker container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,6 +120,8 @@ services:
     build:
       context: .
       dockerfile: .docker/Dockerfile_firestarr
+    security_opt:
+      - seccomp:unconfined
     image: gcc:10.3
     ports:
       - "2222:22"
