--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ WeatherSHIELD/gui/js/jquery-1.11.3.min.js
 WeatherSHIELD/gui/js/jquery.validate.js
 WeatherSHIELD/gui/js/jspdf
 log*.txt
+pyfire/venv
+*.whl
+
