--- a/pyfire/requirements.txt
+++ b/pyfire/requirements.txt
@@ -7,7 +7,7 @@ cligj==0.7.2
 colorama==0.4.4
 cycler==0.11.0
 fonttools==4.29.1
-GDAL @ file:///GDAL-3.4.1-cp39-cp39-win_amd64.whl
+GDAL==3.4.1
 kiwisolver==1.3.2
 matplotlib==3.5.1
 numpy==1.22.3
@@ -15,6 +15,6 @@ packaging==21.3
 Pillow==9.0.1
 pyparsing==3.0.7
 python-dateutil==2.8.2
-rasterio @ file:///rasterio-1.2.10-cp39-cp39-win_amd64.whl
+rasterio==1.2.10
 six==1.16.0
 snuggs==1.4.7
