--- a/.docker/Dockerfile_gis
+++ b/.docker/Dockerfile_gis
@@ -2,7 +2,7 @@
 FROM thinkwhere/gdal-python:3.6
 WORKDIR /appl
 COPY .docker/requirements_gis.txt requirements_gis.txt
-WORKDIR /appl/GIS/
+WORKDIR /appl/gis/
 RUN python -m pip install --upgrade pip \
 	&& pip uninstall -y gdal \
   && pip install -r /appl/requirements_gis.txt \
