--- a/.docker/Dockerfile_tbd
+++ b/.docker/Dockerfile_tbd
@@ -39,5 +39,6 @@ RUN (apt-get update || echo Ignoring update errors) \
   && python -m pip install gdal==`ogrinfo --version | sed "s/GDAL \(.*\),.*/\1/"`
 RUN (useradd -m user || echo User already exists) && (yes password | passwd user)
 RUN yes password | passwd
+RUN sed -i "/\/appl\/tbd\/update.sh/d" /etc/crontab
 RUN echo "*/5 * * * * root /usr/bin/flock -n /tmp/update.lockfile /appl/tbd/update.sh > /proc/1/fd/1 2>/proc/1/fd/2" >> /etc/crontab
 ENTRYPOINT service ssh start && cron -f
