--- a/settings.ini
+++ b/settings.ini
@@ -12,3 +12,7 @@ longitude_min = -141
 
 ; maximum longitude for area bounding box
 longitude_max = -52
+
+; keys for apis that require authentication
+[KEYS]
+spotwx = "
