--- a/settings.ini
+++ b/settings.ini
@@ -1,6 +1,6 @@
 ; this is used by php and python, so use ; for comments
 
-[TBD]
+[tbd]
 ; minimum latitude for area bounding box
 latitude_min = 41
 
@@ -14,5 +14,5 @@ longitude_min = -141
 longitude_max = -52
 
 ; keys for apis that require authentication
-[KEYS]
-spotwx = "
+[keys]
+spotwx = C
