--- a/.docker/Dockerfile_tbd
+++ b/.docker/Dockerfile_tbd
@@ -19,8 +19,8 @@ RUN (apt-get update || echo Ignoring update errors) \
   && export C_INCLUDE_PATH=/usr/include/gdal
 
 FROM gcc_with_libs AS cmake
-ENV cmake_version 3.24.2
-ENV cmake_dir https://github.com/Kitware/CMake/releases/download
+ARG cmake_version=3.24.2
+ARG cmake_dir=https://github.com/Kitware/CMake/releases/download
 RUN cd ~ \
   && wget --no-check-certificate ${cmake_dir}/v${cmake_version}/cmake-${cmake_version}.tar.gz \
   && tar -zxvf cmake-${cmake_version}.tar.gz \
@@ -30,10 +30,10 @@ RUN cd ~ \
   && make install
 
 FROM gcc_with_libs AS perf
-ENV perf_version 6.3.0
-ENV perf_server https://mirrors.edge.kernel.org
-ENV perf_dir ${perf_server}/pub/linux/kernel/tools/perf
-ENV perf_url ${perf_dir}/v${perf_version}/perf-${perf_version}.tar.gz
+ARG perf_version=6.3.0
+ARG perf_server=https://mirrors.edge.kernel.org
+ARG perf_dir=${perf_server}/pub/linux/kernel/tools/perf
+ARG perf_url=${perf_dir}/v${perf_version}/perf-${perf_version}.tar.gz
 RUN cd ~ \
   && wget --no-check-certificate ${perf_url} \
   && tar -xvf perf-${perf_version}.tar.gz \
@@ -42,10 +42,12 @@ RUN cd ~ \
   && cp perf /usr/local/bin
 
 FROM cmake AS python_gcc
-RUN apt-get install -y python3-pip libpython3-dev \
+WORKDIR /appl/
+RUN apt-get install -y python3-pip libpython3-dev python3-venv \
   && update-alternatives --install /usr/bin/python python /usr/bin/python3 10 \
-  && python -m pip install --upgrade pip \
-  && ogrinfo --version | sed "s/GDAL \(.*\),.*/\1/"\
+  && python -m venv /appl/.venv \
+  && . /appl/.venv/bin/activate \
+  && python -m pip install numpy \
   && python -m pip install gdal==`ogrinfo --version | sed "s/GDAL \(.*\),.*/\1/"`
 
 FROM python_gcc as nodocs
@@ -62,16 +64,21 @@ RUN apt-get clean \
     /usr/lib/node_modules/npm/scripts/*
 
 FROM nodocs AS tbd_dev
+ARG user=user
+ARG password=password
 WORKDIR /appl/
 COPY .docker/requirements_tbd.txt requirements_tbd.txt
 WORKDIR /appl/tbd/
 COPY --from=perf /usr/local/bin/perf /usr/local/bin/
-RUN (useradd -m user || echo User already exists) \
-  && (yes password | passwd user) \
-  && yes password | passwd \
-  && yes password | chsh --shell /bin/bash user \
-  && echo cd /appl/tbd >> /home/user/.bashrc \
-  && sed -i "/\/appl\/tbd\/update.sh/d" /etc/crontab \
+RUN (useradd -m ${user} || echo User ${user} already exists) \
+  && (yes ${password} | passwd ${user}) \
+  && yes ${password} | passwd \
+  && yes ${password} | chsh --shell /bin/bash ${user} \
+  && chown -R ${user}:${user} /appl/.venv \
+  && . /appl/.venv/bin/activate \
   && python -m pip install -r /appl/requirements_tbd.txt \
+  && echo source /appl/.venv/bin/activate >> /home/${user}/.bashrc \
+  && echo cd /appl/tbd >> /home/${user}/.bashrc \
+  && sed -i "/\/appl\/tbd\/update.sh/d" /etc/crontab \
   && echo "*/5 * * * * root /usr/bin/flock -n /tmp/update.lockfile /appl/tbd/update.sh > /proc/1/fd/1 2>/proc/1/fd/2" >> /etc/crontab
 ENTRYPOINT service ssh start && cron -f
