--- a/.docker/Dockerfile_tbd
+++ b/.docker/Dockerfile_tbd
@@ -48,7 +48,8 @@ RUN apt-get install -y python3-pip libpython3-dev python3-venv \
   && python -m venv /appl/.venv \
   && . /appl/.venv/bin/activate \
   && python -m pip install numpy \
-  && python -m pip install gdal==`ogrinfo --version | sed "s/GDAL \(.*\),.*/\1/"`
+  && python -m pip install gdal==`ogrinfo --version | sed "s/GDAL \(.*\),.*/\1/"` \
+  && python -m pip install osgeo-utils
 
 FROM python_gcc as nodocs
 RUN apt-get clean \
