added publish step

--- a/settings.ini
+++ b/settings.ini
@@ -15,4 +15,10 @@ longitude_max = -52
 
 ; keys for apis that require authentication
 [keys]
-spotwx = C
+spotwx =
+
+[gis]
+server =
+username =
+password =
+folder =
