--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,14 @@
-.git/
-.github/
-data/
-documentation/
-tbd/data
-pyfire
+**
+*
+
+!.docker/requirements*.txt
+!gis
+gis/**/__pycache__
+!tbd/cffdrs-ng/*.py
+!tbd/CMakeLists.txt
+!tbd/fuel.lut
+!tbd/src
+!tbd/*.py
+!tbd/settings.ini
+!util/*.py
+!./settings.ini
